# petsc4py-examples

./: .gitignore  README.md
AlfaSim/: .project  flow.py  flow2.py  flow3.py  main.py  main2.py  main3.py  models.py  physics0.py  physics1.py  physics3.py  physics4.py  physics5.py  physics6.py
BookMeeting/: .project  Composing Scalable Nonlinear Algebraic Solvers.ipynb  flow.py  main.py  models.py  physics1.py
CompositeSimple1D/: CMakeLists.txt  Composite SIMPLE 1D using petsc4py.ipynb  CompositeSimple1D.pyx  CompositeSimple1Dimpl.c  CompositeSimple1Dimpl.h  FindMKL.cmake  FindPETSc.cmake  __init__.py  fieldsplit.c  flow.py  include_patch_pack.h  mai_no_composite.py  main.c  main.py  models.py  physics0.py  physics1.py  setup.py
CompositeSimple1D/multiblock/: multiblock.c
CompositeTransientHeatTransfer1D/: .project  HeatTransfer1D.pyx  HeatTransfer1Dimpl.c  HeatTransfer1Dimpl.h  Transient Heat Transfer 1D using petsc4py.ipynb  include_patch_pack.h  main.py
FieldSplit/: FieldSplitTemplate.ipynb
HeatTransfer1D/: Heat Transfer 1D using petsc4py.ipynb  HeatTransfer1D.c  HeatTransfer1Dimpl.c  HeatTransfer1Dimpl.h  setup.py
MultiField1D/: Multi Field 1D using petsc4py.ipynb  MultiField1Dimpl.c  MultiField1Dimpl.h  setup.py
TransientHeatTransfer1D/: HeatTransfer1Dimpl.c  HeatTransfer1Dimpl.h  Transient Heat Transfer 1D using petsc4py.ipynb  setup.py
